1_kubernetes/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: $NGINX_NAMESPACE
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - name: http
      protocol: TCP
      port: 80       # service port
      targetPort: 80 # container port
  type: ClusterIP   # change to NodePort or LoadBalancer if you want external access
